# pym8

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MANIFEST.in  NOTES.md  PROPOSALS.md  README.md  ROADMAP.md  TODO.md  clean_test_dirs.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setenv.sh  setup.py  test_sampler_export.py  test_template_load.py
archive/: NOTES-archive.md
demo/: read.py  write.py
demos/: acid_303_midi.py  acid_303_wavsynth.py  acid_909_chain.py  acid_909_midi.py  acid_909_sampler.py  acid_banger_303_demo.py  acid_banger_303_midi_demo.py  acid_banger_303_patterns.py  acid_banger_909_chain.py  acid_banger_909_demo.py  acid_banger_demo.py  acid_banger_patterns.py  acid_synthdrums_909_demo.py  chords_synth.py  download_erica_pico_samples.py  euclid_909_demo.py  euclid_sampler.py  external_test_demo.py  macrosynth_303_bass.yaml  macrosynth_303_demo.py  midi_chord_demo.py  remap_merge.py  sampler_303_bass.yaml  sampler_demo.py  synth_chords_demo.py  wavsynth_303_bass.yaml  wavsynth_303_demo.py
dev/: 303 SQR.m8s  PYFX.m8s  PYFX2.m8s  PYMACRO.m8s  analyze_mod_values.py  analyze_structure.py  byte-dump-0.txt  byte-dump-1.txt  byte-dump-2.txt  byte-dump-3.txt  check_nibble_packing.py  compact_json.py  create_fmsynth_test.py  debug_context_manager.py  debug_modulator_params.py  dump_instrument.py  dump_m8i_sampler_bytes.py  dump_sampler_m8i.py  final_verification.py  fix_enum_strings.py  fix_modulator_serialization.py  fmsynth_offset_map.md  fx_enums.py  hello_macrosynth.old.json  hello_sampler.py  inspect_dwsynthdrum_samples.py  inspect_fmsynths.py  instruments.py  macrosynth_fx.py  move_validation_result.py  overlay_instruments.py  replace_validation_error.py  reverse_engineer_external.py  reverse_engineer_fmsynth.py  reverse_engineer_fmsynth_detailed.py  reverse_engineer_fmsynth_grouped.py  reverse_engineer_midi_settings.py  reverse_engineer_offsets.py  reverse_engineer_sampler.py  rewrite_enum_imports.py  (+12 more)
dev_tools/: extract_instrument.py  inspect_chains.py  raw_inspect_instruments.py
devtools/: extract_instrument.py  inspect_chains.py  inspect_fmsynths.py  raw_inspect_phrases.py  read_wav_slices.py  show_wav_structure.py  slice_wav.py
docs/: FX.md  README.md  SAMPLER.md  out-of-scope.md
examples/: hello_macrosynth.py  hello_synths.py
m8/: __init__.py  chains.py  config.py  format_config.yaml  instruments.py  modulators.py  phrases.py  project.py  song.py
migrations/: convert_fmsynth_ratio_assertions.py  fix_fmsynth_param_offsets.py  increment_hypersynth_offsets.py  move_enum_exception.py  move_enum_tests.py  move_test_utils.py  move_utils_package.py  resolve_instrument_type_duplication.py  resolve_modulator_type_duplication.py  validate_config_enum_consistency.py  validate_modulator_changes.py
proposals/: test-rationalization-proposal.md
templates/: DEFAULT-4-0-1.m8s  DEFAULT401.m8s  HELLO_MACROSYNTH.m8s  M8MACRO.m8s
tests/: array.py  bits.py  fields.py  list.py  object.py  project.py
tools/: byte_inspector.py  clean_demos_from_m8.py  clean_local_demos.py  compact_yaml_fields.py  convert_enum_case.py  copy_demos_to_m8.py  dump_instrument.py  dump_snapshot.py  dump_version.py  fix_case.py  hex_yaml.py  sync.py  (+18 more)
(+223 files in other folders)
