[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pym8"
dynamic = ["version", "dependencies"]
description = "A Python package for the parsing of Dirtywave M8 files"
readme = "README.md"
authors = [
    {name = "jhw", email = "justin.worrall@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/jhw/pym8"

[tool.setuptools]
# This line is critical - it tells setuptools that "m8" is the actual package to install
py-modules = ["m8"]
include-package-data = true

[tool.setuptools.packages.find]
# This tells setuptools where to look for packages
where = ["."]
include = ["m8*"]

[tool.setuptools.package-data]
"m8" = ["**/*.m8s"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# No configuration needed for basic usage