[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pym8"
dynamic = ["version"]
description = "A Python package for the parsing of Dirtywave M8 files"
readme = "README.md"
authors = [
    {name = "jhw", email = "justin.worrall@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "pydub>=0.25.1",  # m8/tools/chain_builder.py — sample-chain WAV processing
    "pyyaml>=6.0",    # demos/lib/preset_yaml.py — YAML preset round-trip
]

[project.urls]
Homepage = "https://github.com/jhw/pym8"

[tool.setuptools]
py-modules = ["m8"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["m8*"]

[tool.setuptools.package-data]
"m8" = ["**/*.m8s", "**/*.yaml"]

[tool.setuptools_scm]
